--- a/sass/_formhack.scss
+++ b/sass/_formhack.scss
@@ -27,7 +27,7 @@ $fh-input-bg-color: $near-white !default;
 // $fh-focus-bg-color: colorHalf($light-grey,0.5) !default;
 // $fh-focus-bg-color: desaturate( $light-grey, 50% ) !default;
 
-$fh-focus-bg-color: rgba($light-grey, 0.8) !default;
+$fh-focus-bg-color: #e0e0e0 !default;
 $fh-focus-border-color: $fh-border-color !default;
 $fh-focus-font-color: $fh-font-color !default;
 
